Ready-to-go draft of AWS serverless get solution
All required files and templates are added in order to create service and extend it with bunch of GET methods

--- a/src/aws/templates/static/serverless.ts.hbs
+++ b/src/aws/templates/static/serverless.ts.hbs
@@ -2,6 +2,8 @@ import type { AWS } from "@serverless/typescript";
 import { STAGES } from "@deployment/typings";
 import { stages } from "@deployment/stages";
 
+import * as functions from "@functions";
+
 const defaultStage: STAGES = "dev";
 const stage = (process.env.STAGE || defaultStage) as STAGES;
 
@@ -27,7 +29,8 @@ const serverlessConfiguration: AWS = {
       STAGE: stage,
       REGION: stages[stage].region,
     },
-  }, // import the function via paths functions: {},
+  }, // import the function via paths 
+  functions,
   package: { individually: true },
   custom: {
     esbuild: {
