--- a/src/aws/templates/static/package.json.hbs
+++ b/src/aws/templates/static/package.json.hbs
@@ -11,7 +11,9 @@
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/node": "^14.14.25",
+    "aws-sdk": "^2.1338.0",
     "esbuild": "^0.14.11",
+    "prettier": "2.8.4",
     "serverless": "^3.0.0",
     "serverless-esbuild": "^1.23.3",
     "ts-node": "^10.4.0",
