Resolve processors names and function name more properly
If there is only method path is provided, it's normalized (replace dashes ("-") and make it in camelCase). If function name is provided, it's used only for function, for processor resolved method path is still being used.

--- a/src/aws/templates/functions/index.ts.hbs
+++ b/src/aws/templates/functions/index.ts.hbs
@@ -5,7 +5,7 @@ import { handlerPath } from '@infrastructure/handler-resolver';
 const stage = process.env.STAGE as STAGES;
 
 export default {
-  handler: `${handlerPath(__dirname)}/handler.{{#if functionName}}{{functionName}}{{else}}{{methodPath}}Handler{{/if}}`,
+  handler: `${handlerPath(__dirname)}/handler.{{> resolvedFunctionName}}`,
   vpc: stages[stage].vpc,
   events: [
     {
