--- a/src/aws/templates/static/package.json.hbs
+++ b/src/aws/templates/static/package.json.hbs
@@ -7,20 +7,24 @@
     "package": "sls package",
     "deploy": "sls deploy"
   },
+  "dependencies": {
+    "aws-sdk": "^2.1338.0",
+    "inversify": "^6.0.1",
+    "node-fetch": "^3.3.1",
+    "reflect-metadata": "^0.1.13"
+  },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/node": "^14.14.25",
-    "aws-sdk": "^2.1338.0",
+    "@types/node-fetch": "^2.6.2",
     "esbuild": "^0.14.11",
     "prettier": "2.8.4",
     "serverless": "^3.0.0",
     "serverless-esbuild": "^1.23.3",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.3",
-    "reflect-metadata": "^0.1.13",
-    "inversify": "^6.0.1"
+    "typescript": "^4.1.3"
   },
   "author": "add helper toget author name",
   "license": "MIT"
