Function creation action enhancment
- IAM Role for the function is optional now, the serverless.ts file was changed correspondingly;
- Default success response is added to AWS Lambda definition

--- a/src/aws/templates/deployment/typings.ts.hbs
+++ b/src/aws/templates/deployment/typings.ts.hbs
@@ -2,8 +2,8 @@ export type STAGES = "dev" | "prod";
 
 export type STAGE = {
   region: REGIONS;
-  role: string;
   accountId: string;
+  role?: string;
   vpc?: Record<"subnetIds" | "securityGroupIds", string[]>;
 };
 
